swagger annotation for post new prop
